# lib_gif

./: .travis.yml  CMakeLists.txt  README  README.md  infra_infos.txt
doc/: references.txt
include/: gif.h  gif_application_extension.h  gif_color.h  gif_color_table.h  gif_comment_extension.h  gif_data_block.h  gif_data_block_factory.h  gif_data_sub_block.h  gif_extension_block.h  gif_extension_block_factory.h  gif_graphic_block.h  gif_graphic_control_extension.h  gif_graphic_rendering_block.h  gif_graphic_rendering_block_factory.h  gif_header.h  gif_image.h  gif_image_descriptor.h  gif_logical_screen.h  gif_logical_screen_descriptor.h  gif_lzw_base.h  gif_lzw_decoder.h  gif_lzw_dictionnary.h  gif_lzw_dictionnary_entry.h  gif_lzw_encoder.h  gif_plain_text_extension.h  gif_trailer.h
src/: gif.cpp  main_lib_gif.cpp
